@@ -1,10 +1,10 @@
 {
-  "count": 34,
+  "count": 30,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 10,
+      "count": 6,
       "uniques": 1
     },
     {
